--- a/01-Notifications-Menu/index.html
+++ b/01-Notifications-Menu/index.html
@@ -5,6 +5,109 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Developer Mentor | Notifications Menu</title>
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="card-header">
+        <p class="noti-text">Notifications</p>
+        <p class="read-box">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="icon icon-tabler icon-tabler-checks"
+            width="44"
+            height="44"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="#2c3e50"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M7 12l5 5l10 -10" />
+            <path d="M2 12l5 5m5 -5l5 -5" />
+          </svg>
+          <span class="read-text">Mark as read</span>
+        </p>
+      </div>
+
+      <div class="card-body">
+        <ul class="notification-list">
+          <li>
+            <span class="fill"></span>
+            <p class="message">
+              There is a new updated version of our software available.
+              <span class="message-details">Sep 14, 2021 at 10:11 AM</span>
+            </p>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon icon-tabler icon-tabler-info-circle"
+              width="44"
+              height="44"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="#2c3e50"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <circle cx="12" cy="12" r="9" />
+              <line x1="12" y1="8" x2="12.01" y2="8" />
+              <polyline points="11 12 12 12 12 16 13 16" />
+            </svg>
+          </li>
+          <li>
+            <span class="fill"></span>
+            <p class="message">
+              I'm ready to answer all your questions about onboarding.
+              <span class="message-details">
+                <span class="sender">Julien Gromik</span> &#x2022; Sep 12, 2021
+                at 10:14 AM
+              </span>
+            </p>
+            <img src="avatar.jpg" alt="Julien Gromik" />
+          </li>
+          <li>
+            <span class="fill"></span>
+            <p class="message">
+              You received a new message in your box from our support.
+              <span class="message-details">Sep 11, 2021 at 08:14 AM</span>
+            </p>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon icon-tabler icon-tabler-mail"
+              width="44"
+              height="44"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="#2c3e50"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <rect x="3" y="5" width="18" height="14" rx="2" />
+              <polyline points="3 7 12 13 21 7" />
+            </svg>
+          </li>
+        </ul>
+      </div>
+
+      <div class="card-footer">
+        <a href="#" class="view-all">View all notifications</a>
+      </div>
+    </main>
+  </body>
 </html>
